--- a/nav.html
+++ b/nav.html
@@ -23,7 +23,14 @@
                 <li><a href="#">Music</a></li>
                 <li><a href="#">Mixes</a></li>
 
-
+<div class="dropdown">
+  <button class="dropbtn">Dropdown Menu</button>
+  <div class="dropdown-content">
+  <a href="#">Link 1</a>
+  <a href="#">Link 2</a>
+  <a href="#">Link 3</a>
+  </div>
+</div>
             </ul>
         </nav>
     </header>
