--- a/practice17.html
+++ b/practice17.html
@@ -62,7 +62,7 @@
 <body>
 
     <header>
-        <h1>SportZone</h1>
+        <h1>Sports Week</h1>
         <p>Your Daily Sports Update</p>
     </header>
 
