--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
             <option>Nepal</option>
             <option>India</option>
             <option>Japan</option>
-        </select><br><br>
+        </select><br><br><br>
 
         <!-- Textarea -->
         <label>Message:</label><br>
